plugins {
    id 'java'
}

group 'me.cocolennon'
version '1.0.0'

repositories {
    mavenCentral()
    mavenLocal()

    maven { url = 'https://repo.glaremasters.me/repository/towny/' }
}

dependencies {
    compileOnly 'org.spigotmc:spigot:1.20.1-R0.1-SNAPSHOT'
    compileOnly 'com.palmergames.bukkit.towny:towny:0.100.0.9'
}

sourceCompatibility = targetCompatibility = '17'
compileJava.options.encoding = 'UTF-8'
setLibsDirName('../builds')